--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,299 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@font-face {
+  font-family: "beyond";
+  src: local("beyond"), url(./fonts/Beyond-Wonderland.ttf) format("truetype");
 }
+
+body {
+  /* background-image: url(./images/stone.jpg); */
+  background-color: #3f1111;
+  background-size: cover;
+  height: 100vh;
+  width: 100vw;
+}
+
+.nav-bar {
+  background: linear-gradient(120deg, #eee2c3, #d3c4a2);
+  background-size: cover;
+  height: 60px;
+  font-size: 40px;
+  color: #701d1d;
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  z-index: 2;
+}
+
+.nav-bar > h4 {
+  font-family: beyond, serif;
+  font-weight: 100;
+  font-size: 55px;
+}
+
+.nav-bar > ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  gap: 15%;
+  list-style: none;
+}
+
+.nav-bar:after {
+  background: -webkit-gradient(linear, left top, left bottom, from(#c20000), to(#8a0000));
+  background: linear-gradient(#c20000, #8a0000);
+  position: absolute;
+  content: "";
+  height: 6px;
+  right: 0;
+  left: 0;
+  top: 100%;
+}
+
+.nav-item-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  gap: 15px;
+}
+
+.nav-btn {
+  display: none;
+}
+
+.main-container {
+  width: 100vw;
+  height: 90vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+@media screen and (max-width: 800px) {
+  .nav-btn {
+    display: inline-block;
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    width: 50px;
+    height: 50px;
+  }
+  .nav-bar:after {
+    display: none;
+  }
+  .nav-item-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    gap: 15px;
+    -webkit-transform: translateY(-400px);
+            transform: translateY(-400px);
+    background: linear-gradient(120deg, #eee2c3, #d3c4a2);
+    -webkit-transition: 500ms;
+    transition: 500ms;
+    width: 100%;
+    z-index: -5;
+    position: absolute;
+  }
+  .nav-item-open {
+    top: 60px;
+    position: absolute;
+    -webkit-transform: none;
+            transform: none;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    gap: 15px;
+    width: 100%;
+    background: linear-gradient(120deg, #eee2c3, #d3c4a2);
+    -webkit-transition: 500ms;
+    transition: 500ms;
+    -webkit-transform-origin: top;
+            transform-origin: top;
+    z-index: 0;
+  }
+}
+
+.board {
+  background: url(./images/wood.jpg);
+  /* border: 15px url(./images/steel.jpg) solid; */
+  border: solid 6px;
+  -o-border-image: url(./images//steel.jpg) 50;
+     border-image: url(./images//steel.jpg) 50;
+  width: 80%;
+  height: 90%;
+  display: -ms-grid;
+  display: grid;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  grid: repeat(115, 270px)/repeat(auto-fill, 200px);
+  position: relative;
+  overflow: scroll;
+  padding-top: 40px;
+}
+
+.board::-webkit-scrollbar {
+  display: none;
+}
+
+.poster {
+  font-family: beyond, serif;
+  color: #5c1616;
+  background-image: url(./images/poster1.png);
+  background-position: center;
+  background-size: cover;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  cursor: pointer;
+}
+
+.poster > h3 {
+  font-size: 25px;
+  font-weight: 100;
+}
+
+.poster > h1 {
+  font-weight: 900;
+  font-size: 33px;
+  font-family: "Times New Roman", Times, serif;
+}
+
+.poster > * {
+  margin: 0 15px 0 0;
+}
+
+.poster-img {
+  width: 60%;
+  border: 1px solid black;
+  /* filter: opacity(0.8) grayscale(70%); */
+  -webkit-filter: opacity(0.6) grayscale(40%);
+          filter: opacity(0.6) grayscale(40%);
+}
+
+.search {
+  font-family: beyond, serif;
+  position: absolute;
+  height: 30px;
+  width: 250px;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  font-size: 25px;
+  background-color: #e1d3b3;
+  border: solid 6px;
+  border-top: none;
+  -o-border-image: url(./images//steel.jpg) 50;
+     border-image: url(./images//steel.jpg) 50;
+}
+
+.poster-open {
+  height: 80%;
+  cursor: initial;
+  -webkit-box-pack: none;
+      -ms-flex-pack: none;
+          justify-content: none;
+  position: relative;
+  padding: 35px;
+  background-image: url(./images/poster1.png);
+  background-position: center;
+  background-size: none;
+}
+
+.poster-open > img {
+  width: 60%;
+}
+
+.poster-open > h1 {
+  position: absolute;
+  top: 10px;
+  font-size: 65px;
+}
+
+.poster-open > h3 {
+  margin-top: 65px;
+  font-size: 55px;
+}
+
+.poster-open > div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin: 10px 45px;
+  gap: 25px;
+}
+
+.poster-open > div > p {
+  font-size: 25px;
+}
+
+.board-open {
+  background: url(./images/wood.jpg);
+  border: solid 6px;
+  -o-border-image: url(./images//steel.jpg) 50;
+     border-image: url(./images//steel.jpg) 50;
+  width: 80%;
+  height: 90%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: relative;
+  grid: repeat(115, 270px)/repeat(auto-fill, 200px);
+}
+
+.ingredient-list {
+  font-size: 25px;
+  list-style: none;
+}
+
+.leave-btn {
+  position: absolute;
+  top: -15px;
+}
+/*# sourceMappingURL=index.css.map */
