--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,11 @@
   src: local("beyond"), url(./fonts/Beyond-Wonderland.ttf) format("truetype");
 }
 
+@font-face {
+  font-family: "western";
+  src: local("western"), url(./fonts/Western-Bang-Bang.woff) format("truetype");
+}
+
 body {
   /* background-image: url(./images/stone.jpg); */
   background-color: #3f1111;
@@ -47,8 +52,8 @@ body {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  gap: 15%;
   list-style: none;
+  font-size: 35px;
 }
 
 .nav-bar:after {
@@ -168,6 +173,8 @@ body {
 }
 
 .poster {
+  -webkit-transition: 300ms;
+  transition: 300ms;
   font-family: beyond, serif;
   color: #5c1616;
   background-image: url(./images/poster1.png);
@@ -194,9 +201,22 @@ body {
 }
 
 .poster > h1 {
-  font-weight: 900;
-  font-size: 33px;
-  font-family: "Times New Roman", Times, serif;
+  font-family: western, serif;
+  font-weight: 100;
+  font-size: 39px;
+  position: relative;
+}
+
+.poster h1::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  background-color: #5c1616;
+  top: 100%;
+  -webkit-transform: translateY(-100%);
+          transform: translateY(-100%);
+  left: 0;
 }
 
 .poster > * {
@@ -205,10 +225,17 @@ body {
 
 .poster-img {
   width: 60%;
-  border: 1px solid black;
   /* filter: opacity(0.8) grayscale(70%); */
-  -webkit-filter: opacity(0.6) grayscale(40%);
-          filter: opacity(0.6) grayscale(40%);
+  -webkit-filter: opacity(0.8) grayscale(30%);
+          filter: opacity(0.8) grayscale(30%);
+  -webkit-mask-image: -webkit-radial-gradient(center, ellipse farthest-corner, black, rgba(0, 0, 0, 0));
+}
+
+.poster:hover {
+  -webkit-filter: brightness(1.2);
+          filter: brightness(1.2);
+  -webkit-transition: 300ms;
+  transition: 300ms;
 }
 
 .search {
@@ -227,53 +254,13 @@ body {
      border-image: url(./images//steel.jpg) 50;
 }
 
-.poster-open {
-  height: 80%;
-  cursor: initial;
-  -webkit-box-pack: none;
-      -ms-flex-pack: none;
-          justify-content: none;
-  position: relative;
-  padding: 35px;
-  background-image: url(./images/poster1.png);
-  background-position: center;
-  background-size: none;
-}
-
-.poster-open > img {
-  width: 60%;
-}
-
-.poster-open > h1 {
-  position: absolute;
-  top: 10px;
-  font-size: 65px;
-}
-
-.poster-open > h3 {
-  margin-top: 65px;
-  font-size: 55px;
-}
-
-.poster-open > div {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin: 10px 45px;
-  gap: 25px;
-}
-
-.poster-open > div > p {
-  font-size: 25px;
-}
-
 .board-open {
   background: url(./images/wood.jpg);
   border: solid 6px;
   -o-border-image: url(./images//steel.jpg) 50;
      border-image: url(./images//steel.jpg) 50;
   width: 80%;
-  height: 90%;
+  height: 95%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -284,16 +271,357 @@ body {
       -ms-flex-align: center;
           align-items: center;
   position: relative;
-  grid: repeat(115, 270px)/repeat(auto-fill, 200px);
 }
 
-.ingredient-list {
-  font-size: 25px;
-  list-style: none;
+.display-poster {
+  max-width: 1300px;
+  width: 90%;
+  height: 90%;
+  display: -ms-grid;
+  display: grid;
+  grid: repeat(10, 1fr)/repeat(10, 1fr);
+  font-size: 18px;
+  gap: 25px;
+}
+
+.display-poster > div {
+  color: #5c1616;
+  background-size: cover;
+  background-position: center;
+  background-image: url(./images/paper2.jpg);
+  -webkit-clip-path: polygon(100% 0, 100% calc(100% - 3px), 98% 100%, 96% calc(100% - 4px), 94% 100%, 92% calc(100% - 2px), 90% 100%, 88% calc(100% - 1px), 86% 100%, 84% calc(100% - 3px), 82% 100%, 80% calc(100% - 2px), 78% 100%, 76% calc(100% - 2px), 74% 100%, 72% calc(100% - 2px), 70% 100%, 68% calc(100% - 4px), 66% 100%, 64% calc(100% - 5px), 62% 100%, 60% calc(100% - 5px), 58% 100%, 56% calc(100% - 3px), 54% 100%, 52% calc(100% - 2px), 50% 100%, 48% calc(100% - 6px), 46% 100%, 44% calc(100% - 4px), 42% 100%, 40% calc(100% - 1px), 38% 100%, 36% calc(100% - 2px), 34% 100%, 32% calc(100% - 5px), 30% 100%, 28% calc(100% - 1px), 26% 100%, 24% calc(100% - 4px), 22% 100%, 20% calc(100% - 6px), 18% 100%, 16% calc(100% - 3px), 14% 100%, 12% calc(100% - 6px), 10% 100%, 8% calc(100% - 2px), 6% 100%, 4% calc(100% - 1px), 2% 100%, 0 calc(100% - 5px), 0 0);
+          clip-path: polygon(100% 0, 100% calc(100% - 3px), 98% 100%, 96% calc(100% - 4px), 94% 100%, 92% calc(100% - 2px), 90% 100%, 88% calc(100% - 1px), 86% 100%, 84% calc(100% - 3px), 82% 100%, 80% calc(100% - 2px), 78% 100%, 76% calc(100% - 2px), 74% 100%, 72% calc(100% - 2px), 70% 100%, 68% calc(100% - 4px), 66% 100%, 64% calc(100% - 5px), 62% 100%, 60% calc(100% - 5px), 58% 100%, 56% calc(100% - 3px), 54% 100%, 52% calc(100% - 2px), 50% 100%, 48% calc(100% - 6px), 46% 100%, 44% calc(100% - 4px), 42% 100%, 40% calc(100% - 1px), 38% 100%, 36% calc(100% - 2px), 34% 100%, 32% calc(100% - 5px), 30% 100%, 28% calc(100% - 1px), 26% 100%, 24% calc(100% - 4px), 22% 100%, 20% calc(100% - 6px), 18% 100%, 16% calc(100% - 3px), 14% 100%, 12% calc(100% - 6px), 10% 100%, 8% calc(100% - 2px), 6% 100%, 4% calc(100% - 1px), 2% 100%, 0 calc(100% - 5px), 0 0);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.display-base {
+  padding: 15px;
+  text-align: center;
+  position: relative;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 6;
+  grid-column: 1 / 7;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 10;
+  grid-row: 1 / 11;
+}
+
+.display-base > h1 {
+  font-size: 5.5em;
+  font-family: western, serif;
+  font-weight: 200;
+  position: relative;
+}
+
+.display-base h1::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 4px;
+  background-color: #5c1616;
+  top: 85%;
+  -webkit-transform: translateY(-100%);
+          transform: translateY(-100%);
+  left: 0;
+}
+
+.display-base > h3 {
+  font-size: 3.5em;
+  font-family: beyond;
+  font-weight: 200;
+}
+
+.display-ingredient-list {
+  position: relative;
+  -ms-grid-column: 7;
+  -ms-grid-column-span: 4;
+  grid-column: 7 / 11;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 5;
+  grid-row: 1 / 6;
+  font-family: beyond, serif;
+  font-size: 1.4em;
+}
+
+.display-ingredient-list h1 {
+  font-family: western, serif;
+  font-weight: 100;
+  position: relative;
+}
+
+.display-ingredient-list h1::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 4px;
+  background-color: #5c1616;
+  top: 85%;
+  -webkit-transform: translateY(-100%);
+          transform: translateY(-100%);
+  left: 0;
+  height: 3px;
+  top: 90%;
+}
+
+.display-ingredient-list ul {
+  font-size: 1.1em;
+  margin: 0 10%;
+}
+
+.display-instructions {
+  position: relative;
+  font-family: beyond, serif;
+  -ms-grid-column: 7;
+  -ms-grid-column-span: 4;
+  grid-column: 7 / 11;
+  -ms-grid-row: 6;
+  -ms-grid-row-span: 5;
+  grid-row: 6 / 11;
+  font-size: 1.4em;
+  padding: 5%;
+  text-align: justify;
+}
+
+.display-instructions h1 {
+  font-family: western, serif;
+  font-weight: 100;
+  position: relative;
+  -ms-flex-preferred-size: s;
+      flex-basis: s;
+}
+
+.display-instructions h1::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 4px;
+  background-color: #5c1616;
+  top: 85%;
+  -webkit-transform: translateY(-100%);
+          transform: translateY(-100%);
+  left: 0;
+  height: 3px;
+  top: 90%;
 }
 
 .leave-btn {
   position: absolute;
-  top: -15px;
+  top: 0;
+  left: 0;
+  width: 40px;
+  height: 40px;
+  border-radius: 0 15% 50% 15%;
+  background-image: url(./images/steel.jpg);
+  border-top: none;
+  border-left: none;
+  color: white;
+  font-size: 30px;
+  cursor: pointer;
+  z-index: 1;
+}
+
+.display-poster > div::after {
+  content: "";
+  position: absolute;
+  top: 3%;
+  width: 22px;
+  height: 22px;
+  border-radius: 50%;
+  background-image: url(./images/nail.png);
+  background-size: cover;
+  right: 5%;
+}
+
+.display-poster > div::before {
+  content: "";
+  position: absolute;
+  top: 3%;
+  width: 22px;
+  height: 22px;
+  border-radius: 50%;
+  background-image: url(./images/nail.png);
+  background-size: cover;
+  left: 5%;
+}
+
+@media screen and (max-width: 1200px) {
+  .board-open {
+    width: 95%;
+  }
+}
+
+@media screen and (max-width: 850px) {
+  .board-open {
+    width: 98%;
+    height: 98;
+  }
+  .display-poster {
+    width: 97%;
+    height: 97%;
+    gap: 10px;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .board-open {
+    width: 98%;
+    height: auto;
+  }
+  .display-poster {
+    width: 97%;
+    height: 97%;
+    gap: 10px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .display-poster > div {
+    padding: 10%;
+  }
+}
+
+/* @media screen and (max-width: 1400px) {
+  .board-open {
+    width: 90%;
+    height: 95%;
+  }
+}
+@media screen and (max-width: 1200px) {
+  .board-open {
+    width: 98%;
+    margin: 0 1%;
+  }
+}
+@media screen and (max-width: 1000px) {
+  .display-poster {
+    font-size: 15px;
+    display: flex;
+    flex-direction: column;
+    > div {
+      width: 100%;
+      height: 100%;
+      margin: 0 15px;
+    }
+  }
+  .board-open {
+    overflow-y: auto;
+  }
+}
+@media screen and (min-width: 1600px) {
+  .display-poster {
+    width: 100%;
+    font-size: 22px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 55px;
+    > div {
+      height: 90%;
+      width: 120%;
+    }
+  }
+} */
+.quotes-main {
+  width: 100vw;
+  min-height: 1000px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.quotes {
+  width: 80%;
+  margin: 25px 0 0 0;
+  min-height: 100px;
+  background-color: black;
+  display: -ms-grid;
+  display: grid;
+  grid: 1fr 1fr 1fr / 1fr 1fr 1fr;
+  position: relative;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  background-image: url(./images/wood.jpg);
+  background-position: center;
+  background-size: cover;
+}
+
+.photo {
+  width: 80px;
+  margin-left: 5px;
+  opacity: 0.7;
+  -webkit-mask-image: -webkit-radial-gradient(center, ellipse farthest-corner, black, rgba(0, 0, 0, 0));
+  /* -webkit-mask-image: -webkit-gradient(
+    linear,
+    left top,
+    left bottom,
+    from(rgba(0, 0, 0, 1)),
+    to(rgba(0, 0, 0, 0))
+  ); */
+}
+
+.person {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 350px;
+  background-image: url(./images/paper2.jpg);
+  background-position: center;
+  background-size: cover;
+  color: black;
+  font-family: beyond;
+  font-style: italic;
+  font-size: 25px;
+  -webkit-box-shadow: 2px 2px 5px black;
+          box-shadow: 2px 2px 5px black;
+}
+
+.person * {
+  pointer-events: none;
+}
+
+.person > div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.person > div > div h5 {
+  font-weight: 100;
+}
+
+.person:hover {
+  -webkit-transition: 500ms;
+  transition: 500ms;
+  -webkit-box-shadow: 8px 8px 5px black;
+          box-shadow: 8px 8px 5px black;
+  -webkit-filter: brightness(1.06);
+          filter: brightness(1.06);
+}
+
+section {
+  position: relative;
 }
 /*# sourceMappingURL=index.css.map */
