--- a/src/styles/_poster.scss
+++ b/src/styles/_poster.scss
@@ -16,6 +16,7 @@
   display: none;
 }
 .poster {
+  transition: 300ms;
   font-family: beyond, serif;
   color: rgb(92, 22, 22);
   background-image: url(./images/poster1.png);
@@ -31,9 +32,20 @@
     font-weight: 100;
   }
   > h1 {
-    font-weight: 900;
-    font-size: 33px;
-    font-family: "Times New Roman", Times, serif;
+    font-family: western, serif;
+    font-weight: 100;
+    font-size: 39px;
+    position: relative;
+  }
+  h1::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    background-color: rgb(92, 22, 22);
+    top: 100%;
+    transform: translateY(-100%);
+    left: 0;
   }
   > * {
     margin: 0 15px 0 0;
@@ -41,9 +53,18 @@
 }
 .poster-img {
   width: 60%;
-  border: 1px solid black;
   /* filter: opacity(0.8) grayscale(70%); */
-  filter: opacity(0.6) grayscale(40%);
+  filter: opacity(0.8) grayscale(30%);
+  -webkit-mask-image: -webkit-radial-gradient(
+    center,
+    ellipse farthest-corner,
+    (rgba(0, 0, 0, 1)),
+    (rgba(0, 0, 0, 0))
+  );
+}
+.poster:hover {
+  filter: brightness(1.2);
+  transition: 300ms;
 }
 
 .search {
