quote json and fixes

--- a/src/styles/_poster.scss
+++ b/src/styles/_poster.scss
@@ -54,8 +54,8 @@
 .poster-img {
   width: 60%;
   /* filter: opacity(0.8) grayscale(70%); */
-  filter: opacity(0.8) grayscale(30%);
-  -webkit-mask-image: -webkit-radial-gradient(
+  filter: opacity(0.9) grayscale(30%);
+  mask-image: -webkit-radial-gradient(
     center,
     ellipse farthest-corner,
     (rgba(0, 0, 0, 1)),
