--- a/src/index.css
+++ b/src/index.css
@@ -226,9 +226,10 @@ body {
 .poster-img {
   width: 60%;
   /* filter: opacity(0.8) grayscale(70%); */
-  -webkit-filter: opacity(0.8) grayscale(30%);
-          filter: opacity(0.8) grayscale(30%);
+  -webkit-filter: opacity(0.9) grayscale(30%);
+          filter: opacity(0.9) grayscale(30%);
   -webkit-mask-image: -webkit-radial-gradient(center, ellipse farthest-corner, black, rgba(0, 0, 0, 0));
+          mask-image: -webkit-radial-gradient(center, ellipse farthest-corner, black, rgba(0, 0, 0, 0));
 }
 
 .poster:hover {
@@ -546,13 +547,13 @@ body {
 }
 
 .quotes {
-  width: 80%;
+  width: 90%;
   margin: 25px 0 0 0;
   min-height: 100px;
   background-color: black;
   display: -ms-grid;
   display: grid;
-  grid: 1fr 1fr 1fr / 1fr 1fr 1fr;
+  grid: repeat(3, 250px)/1fr 1fr 1fr;
   position: relative;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -565,33 +566,33 @@ body {
   width: 80px;
   margin-left: 5px;
   opacity: 0.7;
+  -webkit-filter: grayscale(80%);
+          filter: grayscale(80%);
   -webkit-mask-image: -webkit-radial-gradient(center, ellipse farthest-corner, black, rgba(0, 0, 0, 0));
-  /* -webkit-mask-image: -webkit-gradient(
-    linear,
-    left top,
-    left bottom,
-    from(rgba(0, 0, 0, 1)),
-    to(rgba(0, 0, 0, 0))
-  ); */
+          mask-image: -webkit-radial-gradient(center, ellipse farthest-corner, black, rgba(0, 0, 0, 0));
 }
 
 .person {
+  min-width: 200px;
+  max-width: 350px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 350px;
   background-image: url(./images/paper2.jpg);
   background-position: center;
   background-size: cover;
   color: black;
   font-family: beyond;
   font-style: italic;
-  font-size: 25px;
+  font-size: 22px;
   -webkit-box-shadow: 2px 2px 5px black;
           box-shadow: 2px 2px 5px black;
+  padding: 25px;
+  -webkit-transition: 300ms;
+  transition: 300ms;
 }
 
 .person * {
