--- a/src/styles/_quotes.scss
+++ b/src/styles/_quotes.scss
@@ -5,12 +5,12 @@
   justify-content: center;
 }
 .quotes {
-  width: 80%;
+  width: 90%;
   margin: 25px 0 0 0;
   min-height: 100px;
   background-color: black;
   display: grid;
-  grid: 1fr 1fr 1fr / 1fr 1fr 1fr;
+  grid: repeat(3, 250px) / 1fr 1fr 1fr;
   position: relative;
   box-sizing: border-box;
   background-image: url(./images/wood.jpg);
@@ -21,32 +21,29 @@
   width: 80px;
   margin-left: 5px;
   opacity: 0.7;
-  -webkit-mask-image: -webkit-radial-gradient(
+  filter: grayscale(80%);
+  mask-image: -webkit-radial-gradient(
     center,
     ellipse farthest-corner,
     (rgba(0, 0, 0, 1)),
     (rgba(0, 0, 0, 0))
   );
-  /* -webkit-mask-image: -webkit-gradient(
-    linear,
-    left top,
-    left bottom,
-    from(rgba(0, 0, 0, 1)),
-    to(rgba(0, 0, 0, 0))
-  ); */
 }
 .person {
+  min-width: 200px;
+  max-width: 350px;
   display: flex;
   align-items: center;
-  width: 350px;
   background-image: url(./images/paper2.jpg);
   background-position: center;
   background-size: cover;
   color: black;
   font-family: beyond;
   font-style: italic;
-  font-size: 25px;
+  font-size: 22px;
   box-shadow: 2px 2px 5px black;
+  padding: 25px;
+  transition: 300ms;
 
   * {
     pointer-events: none;
