--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@
 
 body {
   /* background-image: url(./images/stone.jpg); */
-  background-color: #3f1111;
+  background-color: #2e1303;
   background-size: cover;
   height: 100vh;
   width: 100vw;
@@ -547,24 +547,24 @@ body {
 }
 
 .quotes {
-  width: 90%;
+  width: 80%;
   margin: 25px 0 0 0;
+  padding: 2% 0% 12% 0%;
   min-height: 100px;
-  background-color: black;
   display: -ms-grid;
   display: grid;
-  grid: repeat(3, 250px)/1fr 1fr 1fr;
+  grid: repeat(auto-fill, 250px)/1fr 1fr 1fr;
   position: relative;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   background-image: url(./images/wood.jpg);
   background-position: center;
-  background-size: cover;
 }
 
 .photo {
   width: 80px;
   margin-left: 5px;
+  margin-right: 10px;
   opacity: 0.7;
   -webkit-filter: grayscale(80%);
           filter: grayscale(80%);
