--- a/src/index.scss
+++ b/src/index.scss
@@ -8,7 +8,7 @@
 
 body {
   /* background-image: url(./images/stone.jpg); */
-  background-color: rgb(63, 17, 17);
+  background-color: #2e1303;
   background-size: cover;
   height: 100vh;
   width: 100vw;
