--- a/src/styles/_quotes.scss
+++ b/src/styles/_quotes.scss
@@ -5,21 +5,21 @@
   justify-content: center;
 }
 .quotes {
-  width: 90%;
+  width: 80%;
   margin: 25px 0 0 0;
+  padding: 2% 0% 12% 0%;
   min-height: 100px;
-  background-color: black;
   display: grid;
-  grid: repeat(3, 250px) / 1fr 1fr 1fr;
+  grid: repeat(auto-fill, 250px) / 1fr 1fr 1fr;
   position: relative;
   box-sizing: border-box;
   background-image: url(./images/wood.jpg);
   background-position: center;
-  background-size: cover;
 }
 .photo {
   width: 80px;
   margin-left: 5px;
+  margin-right: 10px;
   opacity: 0.7;
   filter: grayscale(80%);
   mask-image: -webkit-radial-gradient(
