--- a/src/index.scss
+++ b/src/index.scss
@@ -8,15 +8,13 @@ $dark-brown: #2e1303;
 @import "./styles/paperPolygon";
 
 body {
-  background-color: #2e1303;
-  background-size: cover;
+  background-color: $dark-brown;
   height: 100vh;
   width: 100vw;
+  overflow: hidden;
 }
 .nav-bar {
   background-image: url(./images/navbar.jpg);
-  background-size: cover;
-
   background-size: cover;
   height: 60px;
   font-size: 40px;
@@ -25,11 +23,12 @@ body {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  z-index: 2;
-  > h4 {
+  z-index: 5;
+  > div > h4 {
     font-family: beyond, serif;
     font-weight: 100;
-    font-size: 55px;
+    font-size: 45px;
+    z-index: 5;
   }
   > ul {
     gap: 0 25px;
@@ -37,6 +36,10 @@ body {
     justify-content: space-between;
     list-style: none;
     font-size: 35px;
+    z-index: 1;
+  }
+  > div {
+    display: flex;
   }
 }
 .nav-bar:after {
@@ -57,6 +60,11 @@ body {
 .nav-btn {
   display: none;
 }
+.company-logo {
+  height: 60px;
+  border-radius: 50%;
+  border: 1px solid $dark-brown;
+}
 
 .main-container {
   width: 100vw;
@@ -66,8 +74,9 @@ body {
   justify-content: center;
 }
 
-@import "./styles/media";
 @import "./styles/poster";
 @import "./styles/displayPoster";
 @import "./styles/quotes";
 @import "./styles/link";
+@import "./styles/media";
+@import "./styles/scrollbar";
