--- a/src/styles/_media.scss
+++ b/src/styles/_media.scss
@@ -3,35 +3,47 @@
     display: inline-block;
     position: absolute;
     right: 10px;
-    top: 10px;
     width: 50px;
+    z-index: 3;
     height: 50px;
+    background-color: #fcdd90;
+    border: 1px lighten($dark-brown, 20) solid;
+    cursor: pointer;
+    transition: 500ms;
   }
-  .nav-bar:after {
-    display: none;
+  .nav-btn:hover {
+    background-color: #ffd66f;
+    transition: 500ms;
   }
   .nav-item-list {
     display: flex;
     flex-direction: column;
     gap: 15px;
-    transform: translateY(-400px);
+    transform: translateY(-160px);
     background: linear-gradient(120deg, #eee2c3, #d3c4a2);
-    transition: 500ms;
     width: 100%;
-    z-index: -5;
     position: absolute;
+    z-index: -1;
   }
   .nav-item-open {
-    top: 60px;
-    position: absolute;
-    transform: none;
-    flex-direction: column;
-    display: flex;
-    gap: 15px;
     width: 100%;
-    background: linear-gradient(120deg, #eee2c3, #d3c4a2);
-    transition: 500ms;
-    transform-origin: top;
-    z-index: 0;
+    position: absolute;
+    top: 65px;
+    transform: none;
+    display: flex;
+    justify-content: flex-start;
+    width: 100%;
+    background-image: url(./images/navbar.jpg);
+    background-size: cover;
+    z-index: -1;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .company-name {
+    display: none;
+  }
+  .nav-bar {
+    justify-content: space-between;
   }
 }
