--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,7 @@ body {
   min-height: 100vh;
   width: 100vw;
   overflow: auto;
+  overflow-x: hidden;
 }
 
 .nav-bar {
@@ -678,10 +679,71 @@ section {
 }
 
 .thing-to-do {
-  width: 225px;
-  height: 500px;
-  color: wheat;
-  background-image: url(./images/paper2.jpg);
-  background-color: red;
+  color: #2e1303;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  max-width: 25%;
+}
+
+.thing-to-do > img {
+  width: 100%;
+  height: 250px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.home > main {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 25px;
+  padding: 0 15px;
+}
+
+.home {
+  background-image: url(./images/navbar.jpg);
+}
+
+.reservation {
+  margin: 45px 0 0 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: relative;
+}
+
+.reservation::before {
+  content: "";
+  position: absolute;
+  width: 80%;
+  height: 3px;
+  border-radius: 5px;
+  top: 0;
+  background-color: #2e1303;
+}
+
+.reservation::after {
+  content: "";
+  position: absolute;
+  width: 80%;
+  height: 3px;
+  border-radius: 5px;
+  top: 100%;
+  background-color: #2e1303;
 }
 /*# sourceMappingURL=index.css.map */
