--- a/src/index.scss
+++ b/src/index.scss
@@ -12,6 +12,7 @@ body {
   min-height: 100vh;
   width: 100vw;
   overflow: auto;
+  overflow-x: hidden;
 }
 .nav-bar {
   background-image: url(./images/navbar.jpg);
