--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -7,9 +7,48 @@
   overflow-y: auto;
 }
 .thing-to-do {
-  width: 225px;
-  height: 500px;
-  color: wheat;
-  background-image: url(./images/paper2.jpg);
-  background-color: red;
+  color: $dark-brown;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 25%;
+  > img {
+    width: 100%;
+    height: 250px;
+    object-fit: cover;
+  }
+}
+.home > main {
+  display: flex;
+  gap: 25px;
+  padding: 0 15px;
+}
+.home {
+  background-image: url(./images/navbar.jpg);
+}
+
+.reservation {
+  margin: 45px 0 0 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+}
+.reservation::before {
+  content: "";
+  position: absolute;
+  width: 80%;
+  height: 3px;
+  border-radius: 5px;
+  top: 0;
+  background-color: $dark-brown;
+}
+.reservation::after {
+  content: "";
+  position: absolute;
+  width: 80%;
+  height: 3px;
+  border-radius: 5px;
+  top: 100%;
+  background-color: $dark-brown;
 }
