--- a/src/index.css
+++ b/src/index.css
@@ -669,6 +669,39 @@ section {
   background: #461d05;
 }
 
+.home {
+  background-image: url(./images/navbar.jpg);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: #2e1303;
+  padding-bottom: 50px;
+  gap: 25px;
+}
+
+.home > * {
+  width: 80%;
+}
+
+.home h2,
+.home h1 {
+  font-family: western;
+  font-weight: 100;
+  text-transform: uppercase;
+}
+
+.home h1 {
+  font-size: 50px;
+  margin: 0 0 10px 0;
+}
+
 .home > header {
   background-image: url(./images/home.jpg);
   background-position: center;
@@ -708,12 +741,8 @@ section {
   padding: 0 15px;
 }
 
-.home {
-  background-image: url(./images/navbar.jpg);
-}
-
 .reservation {
-  margin: 45px 0 0 0;
+  margin: 35px 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -724,13 +753,17 @@ section {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   position: relative;
+  min-height: 200px;
 }
 
 .reservation::before {
   content: "";
   position: absolute;
-  width: 80%;
+  width: 100%;
   height: 3px;
   border-radius: 5px;
   top: 0;
@@ -740,10 +773,61 @@ section {
 .reservation::after {
   content: "";
   position: absolute;
-  width: 80%;
+  width: 100%;
   height: 3px;
   border-radius: 5px;
   top: 100%;
   background-color: #2e1303;
+}
+
+.reservation > div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 5px;
+}
+
+.reservation > div button {
+  border: none;
+  cursor: pointer;
+  background-color: #2e1303;
+  color: #fdf6db;
+}
+
+.reservation > div button:hover {
+  background-color: #461d05;
+  -webkit-transition: 300ms;
+  transition: 300ms;
+}
+
+.reservation > div > * {
+  padding: 5px;
+  color: #2e1303;
+  font-size: 25px;
+  text-transform: capitalize;
+}
+
+footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.find {
+  width: 50%;
+}
+
+.find > img {
+  width: 100%;
+  height: 250px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -webkit-filter: grayscale(60%);
+          filter: grayscale(60%);
+  -webkit-mask-image: -webkit-radial-gradient(center, ellipse farthest-corner, black, rgba(0, 0, 0, 0.5));
+          mask-image: -webkit-radial-gradient(center, ellipse farthest-corner, black, rgba(0, 0, 0, 0.5));
 }
 /*# sourceMappingURL=index.css.map */
