--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -1,3 +1,25 @@
+.home {
+  background-image: url(./images/navbar.jpg);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: $dark-brown;
+  padding-bottom: 50px;
+  gap: 25px;
+  > * {
+    width: 80%;
+  }
+  h2,
+  h1 {
+    font-family: western;
+    font-weight: 100;
+    text-transform: uppercase;
+  }
+  h1 {
+    font-size: 50px;
+    margin: 0 0 10px 0;
+  }
+}
 .home > header {
   background-image: url(./images/home.jpg);
   background-position: center;
@@ -23,21 +45,20 @@
   gap: 25px;
   padding: 0 15px;
 }
-.home {
-  background-image: url(./images/navbar.jpg);
-}
 
 .reservation {
-  margin: 45px 0 0 0;
+  margin: 35px 0;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   position: relative;
+  min-height: 200px;
 }
 .reservation::before {
   content: "";
   position: absolute;
-  width: 80%;
+  width: 100%;
   height: 3px;
   border-radius: 5px;
   top: 0;
@@ -46,9 +67,49 @@
 .reservation::after {
   content: "";
   position: absolute;
-  width: 80%;
+  width: 100%;
   height: 3px;
   border-radius: 5px;
   top: 100%;
   background-color: $dark-brown;
+}
+.reservation > div {
+  display: flex;
+  gap: 5px;
+  button {
+    border: none;
+    cursor: pointer;
+    background-color: $dark-brown;
+    color: #fdf6db;
+  }
+  button:hover {
+    background-color: lighten($dark-brown, 5);
+    transition: 300ms;
+  }
+  > * {
+    padding: 5px;
+    color: $dark-brown;
+    font-size: 25px;
+    text-transform: capitalize;
+  }
+}
+
+footer {
+  display: flex;
+  justify-content: space-between;
+}
+.find {
+  width: 50%;
+  > img {
+    width: 100%;
+    height: 250px;
+    object-fit: cover;
+    filter: grayscale(60%);
+    mask-image: -webkit-radial-gradient(
+      center,
+      ellipse farthest-corner,
+      (rgba(0, 0, 0, 1)),
+      (rgba(0, 0, 0, 0.5))
+    );
+  }
 }
