--- a/src/index.css
+++ b/src/index.css
@@ -830,4 +830,74 @@ footer {
   -webkit-mask-image: -webkit-radial-gradient(center, ellipse farthest-corner, black, rgba(0, 0, 0, 0.5));
           mask-image: -webkit-radial-gradient(center, ellipse farthest-corner, black, rgba(0, 0, 0, 0.5));
 }
+
+@media only screen and (max-width: 1300px) {
+  .home > * {
+    width: 95%;
+  }
+}
+
+@media only screen and (max-width: 1000px) {
+  .home > * {
+    width: 95%;
+  }
+  .home > main {
+    display: -ms-grid;
+    display: grid;
+    grid: 1fr 1fr / 1fr 1fr;
+    gap: 10px;
+  }
+  .thing-to-do {
+    max-width: 100%;
+  }
+  .reservation > div > * {
+    font-size: 16px;
+    padding: 2px;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .home > * {
+    width: 95%;
+  }
+  .home > main {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .thing-to-do {
+    max-width: 100%;
+  }
+  .reservation > div {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin: 5px 0;
+  }
+  footer {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    text-align: center;
+    gap: 15px;
+  }
+  footer > div {
+    width: 100%;
+  }
+}
 /*# sourceMappingURL=index.css.map */
