--- a/src/index.css
+++ b/src/index.css
@@ -445,6 +445,7 @@ body {
 
 @media screen and (max-width: 700px) {
   .board-open {
+    margin-top: 150px;
     width: 98%;
     height: auto;
   }
@@ -683,6 +684,7 @@ section {
           align-items: center;
   color: #2e1303;
   padding-bottom: 50px;
+  min-height: 100vh;
   gap: 25px;
 }
 
@@ -700,6 +702,12 @@ section {
 .home h1 {
   font-size: 50px;
   margin: 0 0 10px 0;
+}
+
+.home > main,
+.home div,
+.home footer {
+  max-width: 2000px;
 }
 
 .home > header {
