--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -5,6 +5,7 @@
   align-items: center;
   color: $dark-brown;
   padding-bottom: 50px;
+  min-height: 100vh;
   gap: 25px;
   > * {
     width: 80%;
@@ -18,6 +19,11 @@
   h1 {
     font-size: 50px;
     margin: 0 0 10px 0;
+  }
+  > main,
+  div,
+  footer {
+    max-width: 2000px;
   }
 }
 .home > header {
