--- a/src/styles/_displayPoster.scss
+++ b/src/styles/_displayPoster.scss
@@ -152,11 +152,11 @@
     gap: 10px;
   }
 }
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 750px) {
   .board-open {
-    margin-top: 150px;
     width: 98%;
-    height: auto;
+    position: absolute;
+    top: 100px;
   }
   .display-poster {
     width: 97%;
