--- a/src/index.scss
+++ b/src/index.scss
@@ -83,4 +83,5 @@ body {
 @import "./styles/link";
 @import "./styles/scrollbar";
 @import "./styles/home";
+@import "./styles//menu";
 @import "./styles/media";
