--- a/src/styles/_poster.scss
+++ b/src/styles/_poster.scss
@@ -1,3 +1,11 @@
+.drinks-header {
+  background-image: url(./images/drinks.jpg);
+  background-position: center;
+  background-size: cover;
+  height: 200px;
+  width: 100vw;
+}
+
 .board {
   background: url(./images/wood.jpg);
   border: solid 6px;
