--- a/src/index.css
+++ b/src/index.css
@@ -14,11 +14,13 @@
 }
 
 body {
-  background-color: #e1d3b3;
   min-height: 100vh;
   width: 100vw;
   overflow: auto;
   overflow-x: hidden;
+  background-image: url(./images/navbar.jpg);
+  background-size: cover;
+  background-position: center;
 }
 
 .nav-bar {
@@ -104,12 +106,24 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+}
+
+.drinks-header {
+  background-image: url(./images/drinks.jpg);
+  background-position: center;
+  background-size: cover;
+  height: 200px;
+  width: 100vw;
 }
 
 .board {
